--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^2.4.5"
+    "grunt": "^0.4.5",
+    "grunt-cafe-mocha": "^0.1.13",
+    "grunt-contrib-jshint": "^0.12.0",
+    "grunt-exec": "^0.4.6",
+    "mocha": "^2.4.5",
+    "zombie": "^4.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
