--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "bootstrap": "^3.3.6",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.13.0",
     "formidable": "^1.0.17",
     "jquery-file-upload-middleware": "^0.1.7"
   },
