--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
     "formidable": "^1.0.17",
-    "jquery-file-upload-middleware": "^0.1.7"
+    "jquery-file-upload-middleware": "^0.1.7",
+    "nodemailer": "^2.1.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
