--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
+    "express-logger": "0.0.3",
     "express-session": "^1.13.0",
     "formidable": "^1.0.17",
     "jquery-file-upload-middleware": "^0.1.7",
+    "loadtest": "^1.3.0",
+    "morgan": "^1.6.1",
     "nodemailer": "^2.1.0"
   },
   "devDependencies": {
