--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "bootstrap": "^3.3.6",
+    "connect": "^2.30.2",
+    "connect-rest": "^2.0.6",
     "cookie-parser": "^1.4.1",
+    "cors": "^2.7.1",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "express-logger": "0.0.3",
@@ -14,16 +17,26 @@
     "formidable": "^1.0.17",
     "jquery-file-upload-middleware": "^0.1.7",
     "loadtest": "^1.3.0",
+    "mongoose": "^4.4.1",
     "morgan": "^1.6.1",
-    "nodemailer": "^2.1.0"
+    "nodemailer": "^2.1.0",
+    "session-mongoose": "^0.5.2",
+    "vhost": "^3.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "connect-bundle": "0.0.5-beta",
     "grunt": "^0.4.5",
     "grunt-cafe-mocha": "^0.1.13",
+    "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-jshint": "^0.12.0",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-uglify": "^0.11.1",
     "grunt-exec": "^0.4.6",
+    "grunt-hashres": "^0.4.1",
+    "grunt-lint-pattern": "^0.1.4",
     "mocha": "^2.4.5",
+    "restler": "^3.4.0",
     "zombie": "^4.2.1"
   },
   "scripts": {
