--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.6.1",
     "nodemailer": "^2.1.0",
     "session-mongoose": "^0.5.2",
+    "underscore": "^1.8.3",
     "vhost": "^3.0.2"
   },
   "devDependencies": {
