--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "connect-rest": "^2.0.6",
     "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
+    "csurf": "^1.8.3",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "express-logger": "0.0.3",
@@ -20,6 +21,8 @@
     "mongoose": "^4.4.1",
     "morgan": "^1.6.1",
     "nodemailer": "^2.1.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
     "session-mongoose": "^0.5.2",
     "underscore": "^1.8.3",
     "vhost": "^3.0.2"
